# project-2-semestr

./: CMakeLists.txt  Game.cpp  Game.hpp  README.md  Random.cpp  Random.hpp  Snake.cpp  Snake.hpp  main.cpp
